; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_BtrFsSearchTree.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/lib/fs/extr_btrfs.c_BtrFsSearchTree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.btrfs_root_item = type { i32, i32 }
%struct.btrfs_disk_key = type { i32 }
%struct.btrfs_path = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.btrfs_root_item*, %struct.btrfs_disk_key*, %struct.btrfs_path*)* @BtrFsSearchTree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @BtrFsSearchTree(%struct.btrfs_root_item* %0, %struct.btrfs_disk_key* %1, %struct.btrfs_path* %2) #0 {
  %4 = alloca %struct.btrfs_root_item*, align 8
  %5 = alloca %struct.btrfs_disk_key*, align 8
  %6 = alloca %struct.btrfs_path*, align 8
  store %struct.btrfs_root_item* %0, %struct.btrfs_root_item** %4, align 8
  store %struct.btrfs_disk_key* %1, %struct.btrfs_disk_key** %5, align 8
  store %struct.btrfs_path* %2, %struct.btrfs_path** %6, align 8
  %7 = load %struct.btrfs_root_item*, %struct.btrfs_root_item** %4, align 8
  %8 = getelementptr inbounds %struct.btrfs_root_item, %struct.btrfs_root_item* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load %struct.btrfs_root_item*, %struct.btrfs_root_item** %4, align 8
  %11 = getelementptr inbounds %struct.btrfs_root_item, %struct.btrfs_root_item* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.btrfs_disk_key*, %struct.btrfs_disk_key** %5, align 8
  %14 = load %struct.btrfs_path*, %struct.btrfs_path** %6, align 8
  %15 = call i32 @_BtrFsSearchTree(i32 %9, i32 %12, %struct.btrfs_disk_key* %13, %struct.btrfs_path* %14)
  ret i32 %15
}

declare dso_local i32 @_BtrFsSearchTree(i32, i32, %struct.btrfs_disk_key*, %struct.btrfs_path*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
